--- a/index.html
+++ b/index.html
@@ -7,5 +7,19 @@
     <title>Aula web I</title>
     <link rel="stylesheet" href="css/estilo.css" />
 </head>
-  <body></body>
+<body>
+  <header>
+      <picture>
+
+      </picture>
+
+  </header>
+  <main>
+
+  </main>
+  <footer>
+
+
+   </footer>
+  </body>
 </html> 
