--- a/index.html
+++ b/index.html
@@ -5,13 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula web I</title>
-    <link rel="stylesheet" href="css/estilo.css" />
+    <link rel="stylesheet" href="./css/estilo.css" />
 </head>
 <body>
   <header>
       <picture>
-
+        <img src="./img/Receitas da Mamacita.png" alt="logo" />
+        <img src="./img/" />
       </picture>
+      <div>
+        <ul>
+          <li>
+            <a href="">Entrar</a>
+          </li>
+        </ul>
+      </div>
 
   </header>
   <main>
