--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,23 +8,58 @@
     <title>Aula web I</title>
     <link rel="stylesheet" href="./css/estilo.css" />
 </head>
-<body>
+
+<body class="container">
   <header>
+    <div id="texto">
       <picture>
         <img src="./img/Receitas da Mamacita.png" alt="logo" />
-        <img src="./img/livro2.png" alt="imagem princioal" />
+        <img id="caderninho" src="./img/livro2.png" alt="imagem princioal" />
       </picture>
+    </div>
+    <div id="entrar">
       <nav>
         <ul>
           <li>
             <a href="">Entrar</a>
           </li>
         </ul>
+        <div>
+          <img id="lupao" src="./img/lupa.png" alt="">
+          <input type="text">
+        </div>
       </nav>
-
+    </div>
   </header>
   <main>
-
+    <ul>
+      <li>
+        <h1>Bolos e Doces</h1>
+        <h1>Carnes</h1>
+        <h1>Massas</h1>
+        <h1>Bebidas</h1>
+        <h1>Veganas</h1>
+        <h1>Fitness</h1>
+      </li>
+    </ul>
+    <div class="divContainer">
+      <div>
+        <img src="./img/pave.png" alt="">
+        <h1>Receita de Pavê simples e rápido com bolacha champagne</h1>
+      </div>
+      <div>
+        <img src="./img/pao.png" alt="">
+        <h1>Pão de queijo vegano com mandioca - nutritivo e leve!</h1>
+      </div>
+      <div>
+        <img src="./img/parmegiana.png" alt="">
+        <h1>Incrível e delicioso bife a parmegiana</h1>
+      </div>
+      <div>
+        <img src="./img/crepioca.png" alt="">
+        <h1>Crepioca: fitness, simples e para toda hora</h1>
+      </div>
+      </div>
   </main>
   <footer>
     <div>
