--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         <picture>
           <img src="./img/Receitas da Mamacita.png" alt="logo" />
           <img id="caderninho" src="./img/livro2.png" alt="imagem princioal" />
-          <img src="./img/livro2.png" alt="imagem princioal" />
         </picture>
       </div>
       <div id="entrar">
@@ -92,9 +91,8 @@
         <svg width="50" height="60" viewBox="0 0 54 50" fill="none" xmlns="http://www.w3.org/2000/svg">
          <path d="M43.5772 9.20987H11.4228C5.11415 9.20987 0 15.0679 0 22.2942V40.706C0 47.9322 5.11415 53.7903 11.4228 53.7903H43.5772C49.8858 53.7903 55 47.9322 55 40.706V22.2942C55 15.0679 49.8858 9.20987 43.5772 9.20987ZM35.852 32.3959L20.8124 40.6122C20.4116 40.8312 19.9487 40.4965 19.9487 39.988V23.0417C19.9487 22.5259 20.4238 22.1917 20.8254 22.4248L35.8651 31.1547C36.3122 31.4143 36.3045 32.1488 35.852 32.3959Z" fill="#F49300"/>
          </svg>
-         </a>
-        
-          
+        </a> 
+        <img src="./img/Siga-nos!.png" alt="">
     </div>
   </footer>
   </body>
