--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
           </div>
         </nav>
       </div>
-  
     </header>
-    <main>
+    <main class="indexMain">
       <ul>
         <li>
           <h1>Bolos e Doces</h1>
