--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
       <div id="texto">
         <picture>
           <img src="./img/Receitas da Mamacita.png" alt="logo" />
-          <img id="caderninho" src="./img/livro2.png" alt="imagem princioal" />
+          <img id="caderninho" src="./img/livro2.png" alt="imagem principal" />
         </picture>
       </div>
       <div id="entrar">
         <nav>
           <ul>
             <li>
-              <a href="">Entrar</a>
+              <a href="login.html">Entrar</a>
             </li>
           </ul>
           <div>
