--- a/login.html
+++ b/login.html
@@ -30,14 +30,14 @@
                     </div>
                     <ul>
                         <li>
-                            <a href="login.html">Não tem conta? Crie agora</a>
+                            <a href="cadatro.html">Não tem conta? Crie agora</a>
                         </li>
                         <li>
                             <a href="">Esqueceu sua senha?</a> 
                         </li>
                     </ul>     
                 </form>
-                <img src="./img/livro2.png" alt="" class="caderninho">
+                <img src="./img/livro2.png" alt="" class="caderninho" id="caderno">
             </div>
         </div>
     </main>
